# md2word

./: .gitignore  README.md  pyproject.toml  shared
examples/: demo.py  output.docx  pyproject.toml  template_md2word.docx
src/md2word/: __init__.py  core.py
